--- a/index.html
+++ b/index.html
@@ -10,6 +10,48 @@
 </head>
 <body>
 
+    <section id="snack1">
+      <div class="wrapper">
+        <div class="box">
+          <h2>Snack 1 - JS</h2>
+          <p>L’utente inserisce due parole in successione, con due prompt. Il software stampa la parola più lunga. Utilizza una funzione per determinare e ritornare la parola più lunga.</p>
+          <input class="input" type="text" id="addParola1" name="addParola1" placeholder="Aggiungi Parola 1">
+          <input class="input" type="text" id="addParola2" name="addParola2" placeholder="Aggiungi Parola 2">
+          <button id="startSnack1" class="btn">Start Snack 1</button>
+          <h2 id="risultatoSnack1">risultato</h2>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="snack2">
+      <div class="wrapper">
+        <div class="box">
+          <h2>Snack 2 - JS</h2>
+          <p>Inserisci un numero, se è pari stampa il numero, se è dispari stampa il numero successivo</p>
+          <input class="input" type="text" id="addNumero" name="addNumero" placeholder="Aggiungi Numero">
+          <button id="startSnack2" class="btn">Start Snack 2</button>
+          <h2 id="risultatoSnack2">risultato</h2>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="snack3">
+      <div class="wrapper">
+        <div class="box">
+          <h2>Snack 2 - JS</h2>
+          <p>Inserisci un numero, se è pari stampa il numero, se è dispari stampa il numero successivo</p>
+          <input class="input" type="text" id="addNumero" name="addNumero" placeholder="Aggiungi Numero">
+          <button id="startSnack2" class="btn">Start Snack 2</button>
+          <h2 id="risultatoSnack2">risultato</h2>
+
+        </div>
+      </div>
+    </section>
+
+
+
 
 
 
