--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
     <section id="snack3">
       <div class="wrapper">
         <div class="box">
-          <h2>Snack 2 - JS</h2>
-          <p>Inserisci un numero, se è pari stampa il numero, se è dispari stampa il numero successivo</p>
-          <input class="input" type="text" id="addNumero" name="addNumero" placeholder="Aggiungi Numero">
-          <button id="startSnack2" class="btn">Start Snack 2</button>
-          <h2 id="risultatoSnack2">risultato</h2>
+          <h2>Snack 3 - JS</h2>
+          <p>Snack 3: Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
+          <button id="startSnack3" class="btn">Start Snack 3</button>
+          <h2 id="risultatoSnack3">risultato</h2>
 
         </div>
       </div>
