--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="wrapper">
         <div class="box">
           <h2>Snack 3 - JS</h2>
-          <p>Snack 3: Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
+          <p>Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
           <button id="startSnack3" class="btn">Start Snack 3</button>
           <h2 id="risultatoSnack3">risultato</h2>
 
