--- a/index.html
+++ b/index.html
@@ -9,45 +9,64 @@
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+  <main>
+    <div class="container">
+      <section id="snack1">
+        <div class="wrapper">
+          <div class="box">
+            <h2>Snack 1 - JS</h2>
+            <p>L’utente inserisce due parole in successione, con due prompt. Il software stampa la parola più lunga. Utilizza una funzione per determinare e ritornare la parola più lunga.</p>
+            <input class="input" type="text" id="addParola1" name="addParola1" placeholder="Aggiungi Parola 1">
+            <input class="input" type="text" id="addParola2" name="addParola2" placeholder="Aggiungi Parola 2">
+            <button id="startSnack1" class="btn">Start Snack 1</button>
+            <h2 id="risultatoSnack1">risultato</h2>
 
-    <section id="snack1">
-      <div class="wrapper">
-        <div class="box">
-          <h2>Snack 1 - JS</h2>
-          <p>L’utente inserisce due parole in successione, con due prompt. Il software stampa la parola più lunga. Utilizza una funzione per determinare e ritornare la parola più lunga.</p>
-          <input class="input" type="text" id="addParola1" name="addParola1" placeholder="Aggiungi Parola 1">
-          <input class="input" type="text" id="addParola2" name="addParola2" placeholder="Aggiungi Parola 2">
-          <button id="startSnack1" class="btn">Start Snack 1</button>
-          <h2 id="risultatoSnack1">risultato</h2>
-
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="snack2">
-      <div class="wrapper">
-        <div class="box">
-          <h2>Snack 2 - JS</h2>
-          <p>Inserisci un numero, se è pari stampa il numero, se è dispari stampa il numero successivo</p>
-          <input class="input" type="text" id="addNumero" name="addNumero" placeholder="Aggiungi Numero">
-          <button id="startSnack2" class="btn">Start Snack 2</button>
-          <h2 id="risultatoSnack2">risultato</h2>
+      <section id="snack2">
+        <div class="wrapper">
+          <div class="box">
+            <h2>Snack 2 - JS</h2>
+            <p>Inserisci un numero, se è pari stampa il numero, se è dispari stampa il numero successivo</p>
+            <input class="input" type="text" id="addNumero" name="addNumero" placeholder="Aggiungi Numero">
+            <button id="startSnack2" class="btn">Start Snack 2</button>
+            <h2 id="risultatoSnack2">risultato</h2>
 
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="snack3">
-      <div class="wrapper">
-        <div class="box">
-          <h2>Snack 3 - JS</h2>
-          <p>Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
-          <button id="startSnack3" class="btn">Start Snack 3</button>
-          <h2 id="risultatoSnack3">risultato</h2>
+      <section id="snack3">
+        <div class="wrapper">
+          <div class="box">
+            <h2>Snack 3 - JS</h2>
+            <p>Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
+            <button id="startSnack3" class="btn">Start Snack 3</button>
+            <h2 id="risultatoSnack3">risultato</h2>
 
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
+    <div class="container">
+      <section id="snack3">
+        <div class="wrapper">
+          <div class="box">
+            <h2>Snack 3 - JS</h2>
+            <p>Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
+            <button id="startSnack3" class="btn">Start Snack 3</button>
+            <h2 id="risultatoSnack3">risultato</h2>
+
+          </div>
+        </div>
+      </section>
+
+    </div>
+  </main>
+
+
 
 
 
