--- a/index.html
+++ b/index.html
@@ -51,13 +51,16 @@
       </section>
     </div>
     <div class="container">
-      <section id="snack3">
+      <section id="snackBonus">
         <div class="wrapper">
           <div class="box">
-            <h2>Snack 3 - JS</h2>
-            <p>Generatore di “nomi cognomi” casuali: prendendo una lista di nomi (‘Michele’, ‘Fabio’, ‘Roberto’) e una lista di cognomi (‘Forghieri’, ‘Papagni’, ‘Marazzini’), Gatsby vuole generare una falsa lista di 5 invitati.</p>
-            <button id="startSnack3" class="btn">Start Snack 3</button>
-            <h2 id="risultatoSnack3">risultato</h2>
+            <h2>Snack Bonus - JS</h2>
+            <p>Crea un array di numeri interi, ad esempio (1, 4, 2, 15, 120, 17, 3) e fai la somma di tutti gli elementi che sono in posizione dispari. Prova prima senza funzione e poi con funzione.</p>
+            <!-- <button id="btnArray" class="btn">Create Array</button>
+            <div id="array"></div> -->
+            <button id="startSnackBonus" class="btn">Start Snack Bonus</button>
+            <h2 id="risultatoSnackBonusOdd">risultato</h2>
+            <h2 id="risultatoSnackBonusEven">risultato</h2>
 
           </div>
         </div>
